[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/FontStyle2SmallerFontSize.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/BattleButtons.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )
Button/colors/font_color = Color( 1, 1, 1, 0.4 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 0.470588 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 0.756863 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )

[node name="BattleButtons" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 96.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0

[node name="AttackP1" type="Button" parent="CanvasLayer/Control"]
margin_left = 5.0
margin_top = 123.0
margin_right = 43.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "Attack"

[node name="HealP1" type="Button" parent="CanvasLayer/Control"]
margin_left = 43.0
margin_top = 123.0
margin_right = 81.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "Heal"

[node name="PassP1" type="Button" parent="CanvasLayer/Control"]
margin_left = 81.0
margin_top = 123.0
margin_right = 119.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "Pass"

[node name="AttackP2" type="Button" parent="CanvasLayer/Control"]
margin_left = 41.0
margin_top = 5.0
margin_right = 79.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "Attack"

[node name="HealP2" type="Button" parent="CanvasLayer/Control"]
margin_left = 79.0
margin_top = 5.0
margin_right = 117.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "Heal"

[node name="PassP2" type="Button" parent="CanvasLayer/Control"]
margin_left = 117.0
margin_top = 5.0
margin_right = 155.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "Pass"

[connection signal="pressed" from="CanvasLayer/Control/AttackP1" to="." method="_on_AttackP1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HealP1" to="." method="_on_HealP1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PassP1" to="." method="_on_PassP1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/AttackP2" to="." method="_on_AttackP2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HealP2" to="." method="_on_HealP2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PassP2" to="." method="_on_PassP2_pressed"]
